--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/darker_grey"
+    >
 
 
     <!--    <TextView-->
@@ -26,6 +28,7 @@
         android:fontFamily="@font/gallaudet_regular"
         android:gravity="center"
         android:maxLength="1"
+        android:textColor="@color/black"
         android:text="R"
         android:textSize="500dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,24 +41,24 @@
     <TextView
         android:id="@+id/tv_2"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="160dp"
         android:layout_marginHorizontal="29dp"
-        android:layout_marginVertical="70dp"
+        android:layout_marginTop="100dp"
+        android:background="@drawable/tv_border"
         android:gravity="center_horizontal"
-        android:text="_"
-        android:textSize="30sp"
+        android:text="hello"
+        android:textSize="20sp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="73dp" />
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="96dp" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/darker_gray"
-        android:text="Go Back"
-        android:textSize="22dp"
+        android:text="@string/go_back"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
