--- a/app/src/main/res/drawable-v24/tv_border.xml
+++ b/app/src/main/res/drawable-v24/tv_border.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 android:shape="rectangle" >
 
-<solid android:color="@android:color/white"/>
+<solid android:color="@android:color/darker_gray"/>
 <stroke android:color="@color/black" android:width="0.5dp"/>
 <corners android:radius="20dp" />
 </shape>
