--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darker_grey"
+    android:orientation="vertical"
+    android:background="@color/white"
     >
-
 
     <!--    <TextView-->
     <!--        android:id="@+id/tv_2"-->
@@ -21,21 +21,6 @@
     <!--        app:layout_constraintStart_toStartOf="parent"-->
     <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-    <TextView
-        android:id="@+id/tv_1"
-        android:layout_width="353dp"
-        android:layout_height="426dp"
-        android:fontFamily="@font/gallaudet_regular"
-        android:gravity="center"
-        android:maxLength="1"
-        android:textColor="@color/black"
-        android:text="R"
-        android:textSize="500dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.554" />
 
 
     <TextView
@@ -43,25 +28,37 @@
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginHorizontal="29dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/tv_border"
         android:gravity="center_horizontal"
         android:text="hello"
         android:textSize="20sp"
         android:textStyle="bold"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="29dp"
-        tools:layout_editor_absoluteY="96dp" />
+       />
+
+    <TextView
+        android:id="@+id/tv_1"
+        android:layout_width="353dp"
+        android:layout_height="420dp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/gallaudet_regular"
+        android:maxLength="1"
+        android:textColor="@color/black"
+        android:text="R"
+        android:textSize="500dp"
+      />
+
 
     <Button
         android:id="@+id/button2"
+        android:layout_marginTop="40dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:text="@string/go_back"
         android:textSize="22sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_1" />
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
