--- a/app/src/main/res/layout/activity_translate.xml
+++ b/app/src/main/res/layout/activity_translate.xml
@@ -36,7 +36,7 @@
         tools:ignore="MissingConstraints"
        />
 
-
+<!--Hey there its a test-->
     <TextView
         android:id="@+id/tv_1"
         android:layout_width="353dp"
